--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,8 @@
-/* * {
-    border: 1px solid blue;
-} */
-
 body {
     font-family: 'Roboto', sans-serif;
     margin: 0;
     padding: 0;
+    padding-top: 96px;
 }
 
 .header, .header-logo, .header-links {
@@ -16,9 +13,13 @@ body {
 
 .header {
     background-color: #ff7598;
-    margin-bottom: auto;
     justify-content: space-between;
-    padding: 2rem;
+    padding: 1rem;
+    top: 0;
+    width: 100%;
+    z-index: 1;
+    position: fixed;
+    opacity: 0.9;
 }
 
 .header-logo {
@@ -56,7 +57,6 @@ a {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    font-size: 18px;
     gap: 6rem;
     padding: 5rem 0;
 }
@@ -67,7 +67,13 @@ a {
 
 .left-info-block-1 h1 {
     font-size: 48px;
+    color: #F9FAF8;
     font-weight: 900;
+}
+
+.left-info-block-1 p {
+    font-size: 18px;
+    color: #fafafa;
 }
 
 .right-img-block-1 { 
@@ -85,7 +91,7 @@ a {
     border-radius: 8px;
     border: none;
     color: #fff;
-    padding: 10px;
+    padding: 8px 10px;
     background: #fc3468;
 }
 
@@ -99,6 +105,7 @@ a {
 
 .main-block-2 h2 {
     font-size: 36px;
+    color: #1F2937;
 }
 
 .jihyo-action-imgs-group {
@@ -127,11 +134,13 @@ a {
     overflow: hidden;
     border: 1px solid #ffc2cd;
     border-radius: 10px;
+    filter: drop-shadow(0 0 0.75rem #ffc2cd);
 }
 
 .text-block-2 {
     margin-top: 1rem;
     font-size: 18px;
+    color: #1F2937;
 }
 
 .text-block-2 span {
@@ -142,11 +151,82 @@ a {
     width: 100%;
 }
 
-@media (min-width: 767px) {
+.main-block-3 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #ffc2cd;
+    padding: 5rem 0;
+}
+
+.full-quote-info {
+    display: flex;
+    width: 90%;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quote-text {
+    font-size: 36px;
+    font-weight: light;
+    font-style: italic;
+    color: #1F2937;
+    width: 80%;
+    margin-bottom: 4px;
+}
+
+.quoter {
+    font-size: 24px;
+    margin-left: auto;
+}
+
+.main-block-4 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 5rem 0;
+}
+
+.sign-up-box {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+    gap: 90px;
+    padding: 30px 80px;
+    background-color: #ff93ac;
+    border-radius: 5px;
+}
+
+.sign-up-header {
+    color: #F9FAF8;
+    font-weight: 500;
+    font-size: 20px;
+}
+
+.sign-up-caption {
+    color: #fafafa;
+    font-size: 15px;
+    margin-top: 0px;
+}
+
+.sign-up-button {
+    flex: none;
+}
+
+.sign-up-button button{
+    border-radius: 8px;
+    border: none;
+    color: #fff;
+    background:#fc3468;
+    padding: 8px 10px;
+}
+
+@media (min-width: 768px) {
     .left-info-block-1 {
         max-width: 30%;
     }
-}
 
 @media (max-width: 1180px) {
     h1 span {
